Working. Multiple websockets conected with Twitter Streaming API - keyword: android 4.0

--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -2,4 +2,5 @@
 
 require:
     - play
-    - org.twitter4j -> twitter4j-core [2.2,)
+    #- org.twitter4j -> twitter4j-core 2.2.5
+    #- org.twitter4j -> twitter4j-stream 2.2.5
